...
        app:altSrc="@drawable/ic_circle_onboarding"
        app:layout_constraintBottom_toBottomOf="@+id/circle2"
        app:layout_constraintEnd_toStartOf="@+id/circle2"
        app:layout_constraintTop_toTopOf="@+id/circle2" />

    <TextView
        android:id="@+id/tv_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/poppins"
...
